- Fixed SCORM content alert box popping up after error
- Fixed bug in content management when more than one possible action was set
- Fixed leaving orphaned entities while deleting lesson
- Fixed bug about new message link for user types with only view permissions in messages
- Added events in lesson initialization list
- Fixed SCORM 1.2 detected as 2004 in enterprise edition

=== Version 3.6.0 build 5831 ===
- Added missing scorm.js file in latest build

=== Version 3.6.0 build 5830 ===
- Installation fixes to better support 3.5.x upgrades (logo, motto, custom blocks)
- Edition separation in statistics fix
- Fixed custom footer to replace default
- When duplicate formatted user names appear, the login is displayed in order to tell who is who
- Added maintain test history setting
- Added user configurable random pool option
- Added optional prerequisite for php_soap, which is needed by phplivedocx
- Fixed custom header propagating from 3.5.5 to 3.6.0, even though it's not supported there
- Fixed user names not displaying in project assignment list
- Fixed issue with not displaying media list properly in edit theme block
- Fixed issue with editor link popup window not displaying content list correctly
- Security fix for editor browsing popup
- Fixed default notifications missing in upgrades
- Fixed students not to have access to lessons that are not activated, from the dashboard
- Fixed dashboard results not to list information for ineligible lessons
- Fixed forum list not displaying when the user does not have lessons
- Fixed complete unit with question issue
- Fixed "Passed all tests" completion condition displaying form data
- Fixed completion conditions displaying units and tests even if the lesson doesn't have any

=== Version 3.6.0 build 5751 ===
eFront 3.6.0 is a completely new version, introducing many important new features
and important enhancements in all aspects of the platform. The hightlights of this
version are:
* 3x Faster than the 3.5.x branch